[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-databases"
dynamic = ["description", "version"]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

keywords = ["databases"]

license = {text = "mit"}
readme = "README.md"

requires-python = ">=3.7"

[project.urls]
"Bug Tracker" = "https://github.com/SimpleArt/advanced-databases/issues"
"Documentation" = "https://simpleart.github.io/advanced-databases/"
"Homepage" = "https://simpleart.github.io/advanced-databases/"
"Repository" = "https://github.com/SimpleArt/advanced-databases"

[tool.setuptools.dynamic]
version = {attr = "advanced.databases.__version__"}
